# purple

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  ci.sh  demo.webm  deny.toml  llms.txt
.github/workflows/: api-changelog.yml  ci.yml  release.yml  site.yml
fuzz/fuzz_targets/: fuzz_ssh_config.rs
scripts/: check-api-changelogs.sh  check-design-system.sh  check-keybindings.sh
site/: check-sync.sh  install.sh  page.html  sync.mjs  sync.sh  worker.ts
src/: animation.rs  app.rs  askpass.rs  askpass_tests.rs  cli.rs  cli_args.rs  clipboard.rs  connection.rs  containers.rs  containers_tests.rs  demo.rs  demo_flag.rs  event.rs  file_browser.rs  fs_util.rs  handler.rs  history.rs  import.rs  lib.rs  logging.rs  main.rs  main_tests.rs  mcp.rs  mcp_tests.rs  messages.rs  onboarding.rs  ping.rs  preferences.rs  quick_add.rs  snippet.rs  snippet_tests.rs  tui.rs  tui_loop.rs  tunnel.rs  update.rs  update_tests.rs  vault_ssh.rs  vault_ssh_tests.rs  visual_regression_tests.rs
src/app/: baselines.rs  display_list.rs  form_state.rs  forms.rs  groups.rs  host_state.rs  hosts.rs  ping.rs  provider_state.rs  search.rs  selection.rs  snippet_state.rs  status_state.rs  tests.rs  tunnel_state.rs  types.rs  update.rs
src/handler/: bulk_tag_editor.rs  confirm.rs  containers.rs  event_loop.rs  file_browser.rs  help.rs  host_detail.rs  host_form.rs  host_list.rs  picker.rs  ping.rs  provider.rs  snippet.rs  sync.rs  tag_picker.rs  tests.rs  theme_picker.rs  tunnel.rs  whats_new.rs
src/handler/host_list/: actions.rs
src/handler/provider/: region.rs
src/messages/: cli.rs
src/providers/: aws.rs  azure.rs  config.rs  config_tests.rs  digitalocean.rs  gcp.rs  hetzner.rs  linode.rs  mod.rs  ovh.rs  proxmox.rs  scaleway.rs  sync.rs  sync_tests.rs  tailscale.rs  upcloud.rs  vultr.rs
src/ssh_config/: model.rs  model_tests.rs  parser.rs  writer.rs
src/ui/: bulk_tag_editor.rs  command_palette.rs  confirm_dialog.rs  containers.rs  design.rs  detail_panel.rs  detail_panel_tests.rs  file_browser.rs  help.rs  host_detail.rs  host_form.rs  host_list.rs  host_list_tests.rs  key_detail.rs  key_list.rs  mod.rs  provider_list.rs  snippet_form.rs  snippet_output.rs  snippet_param_form.rs  snippet_picker.rs  tag_picker.rs  theme.rs  theme_picker.rs  theme_tests.rs  tunnel_form.rs  tunnel_list.rs  whats_new.rs  whats_new_tests.rs
tests/: proptest_mutations.rs  proptest_ssh_config.rs  real_world_configs.rs  roundtrip_fidelity.rs  smoke_tui.sh
tests/api_contracts/: .changelog-state.json  gcp_token.json  scaleway_servers.json  transip_token.json  transip_vps.json
tests/api_contracts/openapi/: azure_token.json
tests/visual_golden/: bulk_tag_editor.golden  command_palette.golden  confirm_delete.golden  confirm_host_key_reset.golden  confirm_import.golden  confirm_purge_stale.golden  confirm_vault_sign.golden  containers.golden  file_browser.golden  help.golden  host_detail.golden  host_form_add.golden  host_form_edit.golden  host_list.golden  host_list_detail_panel.golden  host_list_search.golden  key_detail.golden  key_list.golden  provider_form.golden  provider_list.golden  snippet_form.golden  snippet_output.golden  snippet_param_form.golden  snippet_picker.golden  tag_picker.golden  theme_picker.golden  tunnel_form.golden  tunnel_list.golden  welcome.golden  whats_new.golden
